--- a/sound/shairport/Makefile
+++ b/sound/shairport/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=0.05
 PKG_RELEASE:=$(PKG_SOURCE_VERSION)
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/albertz/shairport.git
+PKG_SOURCE_URL:=git://github.com/albertz/shairport.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=72e2f57e2858f1717d4533fa6d9662055e30a172
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
