strongswan4: use PKG_FIXUP:=autoreconf

--- a/net/strongswan4/Makefile
+++ b/net/strongswan4/Makefile
@@ -81,7 +81,7 @@ PKG_CONFIG_DEPENDS:= \
 	CONFIG_STRONGSWAN4_ROUTING_TABLE_PRIO \
 	$(patsubst %,CONFIG_PACKAGE_strongswan4-mod-%,$(PKG_MOD_AVAILABLE)) \
 
-PKG_FIXUP:=libtool
+PKG_FIXUP:=autoreconf
 PKG_INSTALL:=1
 PKG_BUILD_PARALLEL:=1
 
