--- a/net/strongswan4/Makefile
+++ b/net/strongswan4/Makefile
@@ -180,10 +180,9 @@ endef
 define Package/strongswan4-full/description
 $(call Package/strongswan4/description/Default)
  .
- This meta-package contains dependencies for all of the packaged 
- strongswan4 plugins except kernel-klips, kernel-pfkey, and 
- socket-default which are omitted in favor of kernel-netlink and 
- socket-raw.
+ This meta-package contains dependencies for all of the strongswan4 
+ plugins except kernel-klips, kernel-pfkey, and socket-default which 
+ are omitted in favor of the kernel-netlink and socket-raw plugins.
 endef
 
 
