shairport: switch source

--- a/sound/shairport/Makefile
+++ b/sound/shairport/Makefile
@@ -12,9 +12,11 @@ PKG_VERSION:=0.05
 PKG_RELEASE:=$(PKG_SOURCE_VERSION)
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=git://github.com/albertz/shairport.git
+#PKG_SOURCE_URL:=git://github.com/albertz/shairport.git
+PKG_SOURCE_URL:=git://github.com/Andywebs/shairport.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=df18416cad7da4a6bcded3b2904b37442a7091d3
+#PKG_SOURCE_VERSION:=df18416cad7da4a6bcded3b2904b37442a7091d3
+PKG_SOURCE_VERSION:=d753f1578d1d730bd17264d2cdc9a468e9f2a680
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
 
 PKG_BUILD_PARALLEL:=1
