--- a/net/strongswan4/Makefile
+++ b/net/strongswan4/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=strongswan
-PKG_VERSION:=4.5.1
+PKG_VERSION:=4.5.2rc1
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=http://download.strongswan.org/
-PKG_MD5SUM:=81a4a699c4a1a49b74061dfa47b5a033
+PKG_MD5SUM:=9768203834bf878e09b0d12b3906b9a8
 
 PKG_MOD_AVAILABLE:= \
 	aes \
@@ -22,10 +22,12 @@ PKG_MOD_AVAILABLE:= \
 	attr-sql \
 	blowfish \
 	constraints \
+	coupling \
 	curl \
 	des \
 	dhcp \
 	dnskey \
+	duplicheck \
 	eap-md5 \
 	eap-mschapv2 \
 	eap-radius \
@@ -62,13 +64,14 @@ PKG_MOD_AVAILABLE:= \
 	stroke \
 	uci \
 	updown \
+	whitelist \
 	x509 \
 	xauth \
 	xcbc \
 
 PKG_BUILD_DEPENDS:= \
-	clearsilver \
-	fcgi \
+	PACKAGE_strongswan4-libfast:clearsilver \
+	PACKAGE_strongswan4-libfast:fcgi \
 
 PKG_CONFIG_DEPENDS:= \
 	CONFIG_STRONGSWAN4_ENABLE_CISCO_QUIRKS \
@@ -134,10 +137,12 @@ $(call Package/strongswan4/Default)
 	+strongswan4-mod-attr-sql \
 	+strongswan4-mod-blowfish \
 	+strongswan4-mod-constraints \
+	+strongswan4-mod-coupling \
 	+strongswan4-mod-curl \
 	+strongswan4-mod-des \
 	+strongswan4-mod-dhcp \
 	+strongswan4-mod-dnskey \
+	+strongswan4-mod-duplicheck \
 	+strongswan4-mod-eap-md5 \
 	+strongswan4-mod-eap-mschapv2 \
 	+strongswan4-mod-eap-radius \
@@ -172,6 +177,7 @@ $(call Package/strongswan4/Default)
 	+strongswan4-mod-stroke \
 	+strongswan4-mod-uci \
 	+strongswan4-mod-updown \
+	+strongswan4-mod-whitelist \
 	+strongswan4-mod-x509 \
 	+strongswan4-mod-xauth \
 	+strongswan4-mod-xcbc \
@@ -281,6 +287,20 @@ $(call Package/strongswan4/description/Default)
 endef
 
 
+define Package/strongswan4-libfast
+$(call Package/strongswan4/Default)
+  TITLE+= libfast
+  DEPENDS:= strongswan4
+endef
+
+define Package/strongswan4-libfast/description
+$(call Package/strongswan4/description/Default)
+ .
+ This package contains libfast, a lightweight framework to build native 
+ web applications using ClearSilver and FastCGI.
+endef
+
+
 define Package/strongswan4-utils
 $(call Package/strongswan4/Default)
   TITLE+= utilities
@@ -321,9 +341,9 @@ CONFIGURE_ARGS+= \
 	$(if $(CONFIG_STRONGSWAN4_ENABLE_NAT_TRANSPORT),--enable-nat-transport,--disable-nat-transport) \
 	$(if $(CONFIG_STRONGSWAN4_ENABLE_VENDOR_ID),--enable-vendor-id,--disable-vendor-id) \
 	$(if $(CONFIG_STRONGSWAN4_ENABLE_XAUTH_VID),--enable-xauth-vid,--disable-xauth-vid) \
-	--disable-fast \
 	--disable-scripts \
 	--disable-static \
+	$(if $(CONFIG_PACKAGE_strongswan4-libfast),--enable-fast,--disable-fast) \
 	$(if $(CONFIG_PACKAGE_strongswan4-utils),--enable-tools,--disable-tools) \
 	--with-random-device="$(call qstrip,$(CONFIG_STRONGSWAN4_DEVICE_RANDOM))" \
 	--with-urandom-device="$(call qstrip,$(CONFIG_STRONGSWAN4_DEVICE_URANDOM))" \
@@ -333,7 +353,9 @@ CONFIGURE_ARGS+= \
 	  $(if $(CONFIG_PACKAGE_strongswan4-mod-$(m)),--enable-$(m),--disable-$(m)) \
 	) \
 
-EXTRA_CPPFLAGS+= -I$(STAGING_DIR)/usr/include/ClearSilver
+ifneq ($(CONFIG_PACKAGE_strongswan4-libfast),)
+  EXTRA_CPPFLAGS+= -I$(STAGING_DIR)/usr/include/ClearSilver
+endif
 
 EXTRA_LDFLAGS+= -Wl,-rpath-link,$(STAGING_DIR)/usr/lib
 
@@ -387,6 +409,12 @@ define Package/strongswan4-app-pluto/install
 endef
 
 
+define Package/strongswan4-libfast/install
+	$(INSTALL_DIR) $(1)/usr/lib
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libfast.so.* $(1)/usr/lib/
+endef
+
+
 define Package/strongswan4-utils/install
 	$(INSTALL_DIR) $(1)/usr/lib/ipsec
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/lib/ipsec/{openac,pki,scepclient} $(1)/usr/lib/ipsec/
@@ -410,6 +438,7 @@ $(eval $(call BuildPackage,strongswan4-full))
 $(eval $(call BuildPackage,strongswan4-minimal))
 $(eval $(call BuildPackage,strongswan4-app-charon))
 $(eval $(call BuildPackage,strongswan4-app-pluto))
+$(eval $(call BuildPackage,strongswan4-libfast))
 $(eval $(call BuildPackage,strongswan4-utils))
 
 $(eval $(call BuildPlugin,aes,AES crypto,))
@@ -418,10 +447,12 @@ $(eval $(call BuildPlugin,attr,File-based config attr,))
 $(eval $(call BuildPlugin,attr-sql,SQL-based config attrib,+strongswan4-mod-sql))
 $(eval $(call BuildPlugin,blowfish,Blowfish crypto,))
 $(eval $(call BuildPlugin,constraints,X.509 constraint checking,))
+$(eval $(call BuildPlugin,coupling,Peer certificate coupling,))
 $(eval $(call BuildPlugin,curl,cURL,+PACKAGE_strongswan4-mod-curl:libcurl))
 $(eval $(call BuildPlugin,des,DES crypto,))
 $(eval $(call BuildPlugin,dhcp,DHCP-based IP and DNS,))
 $(eval $(call BuildPlugin,dnskey,DNS RR key decoding,))
+$(eval $(call BuildPlugin,duplicheck,Duplicate checking,))
 $(eval $(call BuildPlugin,eap-md5,MD5 EAP (CHAP) auth,))
 $(eval $(call BuildPlugin,eap-mschapv2,MS-CHAPv2 EAP auth,))
 $(eval $(call BuildPlugin,eap-radius,RADIUS proxy auth,))
@@ -458,6 +489,7 @@ $(eval $(call BuildPlugin,sqlite,SQLite database interface,+strongswan4-mod-sql 
 $(eval $(call BuildPlugin,stroke,Stroke,))
 $(eval $(call BuildPlugin,uci,UCI config interface,+PACKAGE_strongswan4-mod-uci:libuci))
 $(eval $(call BuildPlugin,updown,updown firewall,))
+$(eval $(call BuildPlugin,whitelist,Peer identity whitelisting,))
 $(eval $(call BuildPlugin,x509,x509 certificate,))
 $(eval $(call BuildPlugin,xauth,XAUTH authentication,))
 $(eval $(call BuildPlugin,xcbc,xcbc crypto,))
