--- a/sound/shairport/Makefile
+++ b/sound/shairport/Makefile
@@ -12,23 +12,44 @@ PKG_VERSION:=0.05
 PKG_RELEASE:=$(PKG_SOURCE_VERSION)
 
 PKG_SOURCE_PROTO:=git
-#PKG_SOURCE_URL:=git://github.com/albertz/shairport.git
-PKG_SOURCE_URL:=git://github.com/Andywebs/shairport.git
+PKG_SOURCE_URL:=git://github.com/albertz/shairport.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-#PKG_SOURCE_VERSION:=df18416cad7da4a6bcded3b2904b37442a7091d3
-PKG_SOURCE_VERSION:=d753f1578d1d730bd17264d2cdc9a468e9f2a680
+PKG_SOURCE_VERSION:=6ac65ce84359c7363d0567c67fe707cc03a9597f
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
 
 PKG_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/shairport
+
+define Package/shairport/Default
   SECTION:=sound
   CATEGORY:=Sound
-  TITLE:=Server for RAOP protocol
+  TITLE:=ShairPort
   URL:=http://mafipulation.org/
-  DEPENDS:= +libopenssl +libao +avahi-daemon +avahi-utils +perl \
+endef
+define Package/shairport/description/Default
+  ShairPort is server software that implements the RAOP protocol for
+  playback of music streamed from a compatible remote client.
+endef
+
+
+define Package/shairport
+$(call Package/shairport/Default)
+  DEPENDS:= +libopenssl +libao +avahi-daemon +avahi-utils
+  MENU:=1
+endef
+define Package/shairport/description
+$(call Package/shairport/description/Default)
+ .
+ This package contains C-coded ShairPort.
+endef
+
+
+define Package/shairport-perl
+$(call Package/strongswan4/Default)
+  TITLE+= (Perl)
+  DEPENDS:= shairport +perl \
       +perl-crypt-openssl-rsa +perl-getopt-long \
       +perl-http-message +perl-uri \
       +perlbase-autoloader +perlbase-config +perlbase-cwd \
@@ -39,15 +60,24 @@ define Package/shairport
       +perlbase-selectsaver +perlbase-socket +perlbase-symbol \
       +perlbase-tie +perlbase-xsloader
 endef
-
-define Package/shairport/description
-  Shairport is server software that implements the RAOP protocol for
-  playback of music streamed from a compatible remote client.
+define Package/strongswan4-app-charon/description
+$(call Package/strongswan4/description/Default)
+ .
+ This package contains Perl ShairPort and Perl dependencies.
 endef
+
 
 define Package/shairport/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/{hairtunes,shairport,shairport.pl} $(1)/usr/bin/
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/{hairtunes,shairport} $(1)/usr/bin/
 endef
 
+
+define Package/shairport-perl/install
+	$(INSTALL_DIR) $(1)/usr/bin
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/shairport.pl $(1)/usr/bin/
+endef
+
+
 $(eval $(call BuildPackage,shairport))
+$(eval $(call BuildPackage,shairport-perl))
